--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Drama'
 - !lcc 'PQ'
+- GITenberg
 title: "Histoire tragique de la princesse Phénissa\r\nexpliquée en quatre épisodes"
 url: http://www.gutenberg.org/ebooks/17542
